# marvel-gen4

./: .gitmodules  CMakeLists.txt  README.md  buildAllFirmware.bat  errorCodeDecoder.py  flashAllFirmware.bat  marvel4.0_CMU1_1_to_18.dbc  submoduleParser.py
Core/Inc/: adc.h  main.h  tim.h
Core/Src/: adc.c  dma.c  gpio.c  iwdg.c  main.c  stm32l4xx_it.c  tim.c
Tests/: CMakeLists.txt  runAllTests.c  testCRC.c  testCRC.h  testCoulombCounting.c  testCoulombCounting.h
z_configGeneratorPython/: configGeneratorGUI.py  run.bat  v04.00.00.csv
